--- a/metaFinal/src/view/adminPanel/EventList.fxml
+++ b/metaFinal/src/view/adminPanel/EventList.fxml
@@ -6,58 +6,48 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="465.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.EventListController">
+<VBox prefHeight="458.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.EventListController">
   <children>
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
        
-<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="503.0" prefWidth="925.0" styleClass="background" stylesheets="@../../../../css/BACK.css" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="461.0" prefWidth="933.0" styleClass="background" stylesheets="@../../../../css/BACK.css" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
-        <VBox layoutX="6.0" layoutY="72.0" prefHeight="311.0" prefWidth="61.0" spacing="25.0">
-            <children>
-                <Label styleClass="labelform" text="ID" />
-                <Label layoutX="10.0" layoutY="10.0" styleClass="labelform" text="Event Type" />
-                <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Chanteur" />
-                        <Label prefHeight="42.0" prefWidth="43.0" styleClass="labelform" text="Adresse" />
-                        <Label styleClass="labelform" text="Event Date" />
-                        <Label styleClass="labelform" text="Event Price" />
-                        <Label styleClass="labelform" text="Image" />
-                
-            </children>
-        </VBox>
-        <Button fx:id="bsave" layoutX="14.0" layoutY="431.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Save">
+        <VBox layoutX="6.0" layoutY="72.0" prefHeight="311.0" prefWidth="61.0" spacing="25.0" />
+        <Button fx:id="bsave" layoutX="392.0" layoutY="383.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Save">
            
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="bupdate" layoutX="96.0" layoutY="431.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="Edit">
+        <Button fx:id="bupdate" layoutX="392.0" layoutY="420.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="Edit">
          
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-            <Button fx:id="bdelete" layoutX="181.0" layoutY="431.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Delete">
+            <Button fx:id="bdelete" layoutX="496.0" layoutY="420.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Delete">
             
                                  <font>
                 <Font name="Times New Roman" size="12.0" />
             </font>
             </Button>
             
-              <Button layoutX="267.0" layoutY="431.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Reset">
+              <Button layoutX="496.0" layoutY="383.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             
         </Button>
             
-           <TableView fx:id="table" layoutX="316.0" layoutY="66.0" onMouseClicked="#tablehandleButtonAction" prefHeight="302.0" prefWidth="575.0">
+           <TableView fx:id="table" layoutX="316.0" layoutY="66.0" onMouseClicked="#tablehandleButtonAction" prefHeight="265.0" prefWidth="574.0">
             <columns>
                 <TableColumn fx:id="eIde" prefWidth="33.0" text="ID" />
                 <TableColumn fx:id="eType_event" prefWidth="82.33331298828125" text="Event Type" />
@@ -76,25 +66,40 @@
                     </font>
                 
                 </Label>
+                        <Button layoutX="519.0" layoutY="3.0" mnemonicParsing="false" onAction="#chart_switch" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="Most Reserved Event" />
             </children>
         </Pane>
-        <VBox layoutX="74.0" layoutY="55.0" prefHeight="361.0" prefWidth="234.0" spacing="15.0">
+        <VBox layoutX="11.0" layoutY="61.0" prefHeight="311.0" prefWidth="297.0" spacing="15.0">
             <children>
-                            <TextField fx:id="Ide" editable="false" prefHeight="27.0" prefWidth="234.0" />
-                            <TextField fx:id="Type_event" layoutX="10.0" layoutY="10.0" />
-                            <TextField fx:id="Chanteur" layoutX="10.0" layoutY="20.0" />
-                            <TextField fx:id="Adresse" styleClass="field" />
-                        <DatePicker fx:id="Date_event" prefHeight="30.0" prefWidth="232.0" />
-                        <TextField fx:id="prix_e" />
-                        <ImageView fx:id="image_view" fitHeight="58.0" fitWidth="114.0" pickOnBounds="true" preserveRatio="true" />
+                            <TextField fx:id="Ide" editable="false" prefHeight="35.0" prefWidth="259.0" promptText="ID Automatique" visible="false" />
+                            <TextField fx:id="Type_event" alignment="CENTER" layoutX="10.0" layoutY="10.0" promptText="Type de l'evenement" />
+                            <TextField fx:id="Chanteur" alignment="CENTER" layoutX="10.0" layoutY="20.0" promptText="Le chanteur" />
+                            <TextField fx:id="Adresse" alignment="CENTER" promptText="Addresse" styleClass="field" />
+                        <DatePicker fx:id="Date_event" prefHeight="35.0" prefWidth="298.0" promptText="Date" />
+                        <TextField fx:id="prix_e" alignment="CENTER" promptText="Prix" />
             </children>
         </VBox>
-                  <Button fx:id="insert_image" layoutX="14.0" layoutY="389.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="11.0" prefWidth="34.0" styleClass="btn" text="...">
+                  <Button fx:id="insert_image" layoutX="14.0" layoutY="416.0" minWidth="41.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="35.0" prefWidth="41.0" styleClass="btn" text="...">
                      <font>
                         <Font name="Times New Roman Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Label fx:id="file_path" alignment="CENTER" layoutX="369.0" layoutY="408.0" prefHeight="23.0" prefWidth="199.0" />
+                  <Label fx:id="file_path" alignment="CENTER" layoutX="695.0" layoutY="436.0" prefHeight="23.0" prefWidth="108.0" />
+                  <Label fx:id="seee" layoutX="340.0" layoutY="360.0" prefHeight="17.0" prefWidth="534.0" />
+                  <ImageView fx:id="image_view" fitHeight="58.0" fitWidth="133.0" layoutX="134.0" layoutY="387.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label layoutX="647.0" layoutY="372.0" text="Search Section">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="filterField" alignment="CENTER" layoutX="647.0" layoutY="392.0" prefHeight="35.0" prefWidth="235.0" promptText="Type Here!" />
+                  <Button layoutX="785.0" layoutY="15.0" mnemonicParsing="false" onAction="#evenement_switch" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="Gestion Sponsor" />
+                  <Button layoutX="827.0" layoutY="331.0" mnemonicParsing="false" onAction="#savetopdf" prefHeight="39.0" prefWidth="77.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="To Excel" />
+                  <ImageView fitHeight="98.0" fitWidth="126.0" layoutY="-4.0">
+                     <image>
+                        <Image url="@../../logo.png" />
+                     </image>
+                  </ImageView>
         
      
     </children>
