correction bd & control de saisie user et signup

--- a/metaFinal/src/view/adminPanel/UserList.fxml
+++ b/metaFinal/src/view/adminPanel/UserList.fxml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="514.0" prefWidth="813.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.UserListController">
+<VBox prefHeight="578.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.UserListController">
   <children>
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
        
-<AnchorPane id="AnchorPane" prefHeight="513.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="541.0" prefWidth="887.0" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
         <VBox layoutX="15.0" layoutY="16.0" prefHeight="157.0" prefWidth="62.0" spacing="25.0">
             <children>
@@ -31,33 +33,33 @@
                 
             </children>
         </VBox>
-        <Button fx:id="bsave" layoutX="3.0" layoutY="432.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn"  text="Save">
+        <Button fx:id="bsave" layoutX="410.0" layoutY="426.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
            
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="bupdate" layoutX="98.0" layoutY="432.0" onAction="#updateEvent" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" text="Edit">
+        <Button fx:id="bupdate" layoutX="490.0" layoutY="426.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
          
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-            <Button fx:id="bdelete" layoutX="189.0" layoutY="433.0" onAction="#deleteEvent" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" styleClass="btn"  text="Delete">
+            <Button fx:id="bdelete" layoutX="577.0" layoutY="426.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
             
                                  <font>
                 <Font name="Times New Roman" size="12.0" />
             </font>
             </Button>
             
-              <Button layoutX="279.0" layoutY="433.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
+              <Button layoutX="648.0" layoutY="426.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             
         </Button>
             
-           <TableView fx:id="table" onMouseClicked="#tablehandleButtonAction" layoutX="316.0" layoutY="66.0"  prefHeight="302.0" prefWidth="575.0">
+           <TableView fx:id="table" layoutX="316.0" layoutY="66.0" onMouseClicked="#tablehandleButtonAction" prefHeight="302.0" prefWidth="575.0">
             <columns>
                 <TableColumn fx:id="uidu" prefWidth="33.0" text="ID" />
                 <TableColumn fx:id="ucin" prefWidth="82.33331298828125" text="CIN" />
@@ -87,11 +89,13 @@
                             <TextField fx:id="prenom" styleClass="field" />
                             <TextField fx:id="tel" prefHeight="26.0" prefWidth="0.0" styleClass="field" />
                             <TextField fx:id="email" prefHeight="0.0" prefWidth="56.0" styleClass="field" />
-                            <TextField fx:id="password" prefHeight="0.0" prefWidth="56.0" styleClass="field" /> 
-                            <TextField fx:id="dateNaissance" prefHeight="0.0" prefWidth="56.0" styleClass="field" />
-                            <TextField fx:id="image" prefHeight="0.0" prefWidth="56.0" styleClass="field" />
+                            <TextField fx:id="password" prefHeight="0.0" prefWidth="56.0" styleClass="field" />
+                        <DatePicker fx:id="dateNaissance" />
             </children>
         </VBox>
+                  <ImageView fx:id="image_view" fitHeight="100.0" fitWidth="170.0" layoutX="83.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true" />
+                  <Button fx:id="insert_image" layoutX="78.0" layoutY="480.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="31.0" prefWidth="143.0" styleClass="insert-image-button" text="Insert Image" />
+                  <Label fx:id="file_path" layoutX="105.0" layoutY="458.0" prefHeight="21.0" prefWidth="90.0" />
         
      
     </children>
