--- a/metaFinal/src/view/PartieClient/modifierCompte.fxml
+++ b/metaFinal/src/view/PartieClient/modifierCompte.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="left_main" onMouseClicked="#link99" prefHeight="683.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login_signup.SignupController">
+<AnchorPane fx:id="left_main" prefHeight="683.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PartieClient.ModifierCompteController">
    <children>
       <AnchorPane layoutX="10.0" layoutY="8.0" prefHeight="675.0" prefWidth="522.0" style="-fx-background-color: #073258;">
          <children>
@@ -26,7 +26,7 @@
                </image></ImageView>
          </children>
       </AnchorPane>
-      <Button fx:id="submitButton" contentDisplay="CENTER" defaultButton="true" layoutX="778.0" layoutY="596.0" mnemonicParsing="false" onAction="#signup" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #073258;" text="Valider" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="submitButton" contentDisplay="CENTER" defaultButton="true" layoutX="768.0" layoutY="553.0" mnemonicParsing="false" onAction="#Valider" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #073258;" text="Valider" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Akhbar MT" size="18.0" />
          </font>
@@ -43,10 +43,5 @@
       <Label layoutX="557.0" layoutY="421.0" prefHeight="21.0" prefWidth="50.0" text="Image:" textFill="#0e0079" />
  <ImageView fx:id="image_view" fitHeight="92.0" fitWidth="170.0" layoutX="621.0" layoutY="413.0" pickOnBounds="true" preserveRatio="true" />
             <Button fx:id="insert_image" layoutX="635.0" layoutY="508.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="31.0" prefWidth="143.0" styleClass="insert-image-button" text="Insert Image" />
-      <Button fx:id="Login" contentDisplay="CENTER" defaultButton="true" layoutX="991.0" layoutY="8.0" mnemonicParsing="false" onAction="#Login" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: lightgray;" text="Login" textAlignment="CENTER" textFill="#030303">
-         <font>
-            <Font name="Akhbar MT" size="18.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
