--- a/metaFinal/src/view/hotel/AcceuilFXML.fxml
+++ b/metaFinal/src/view/hotel/AcceuilFXML.fxml
@@ -90,11 +90,6 @@
                      </opaqueInsets>
                   </VBox>
                   <HBox prefHeight="48.0" prefWidth="310.0" />
-                  <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#Gerer" prefHeight="31.0" prefWidth="301.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Gerer vos chambre et vos hotels">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </Button>
                </children>
             </VBox>
          </left>
@@ -124,24 +119,37 @@
                                       </rowConstraints>
                                     </GridPane>
                                     <HBox fx:id="chosenhotelCard1" alignment="CENTER" layoutX="267.0" layoutY="10.0" prefHeight="100.0" prefWidth="477.0" styleClass="shadow" stylesheets="@../../values/style.css" />
-                                    <ImageView fx:id="image_view" fitHeight="341.0" fitWidth="524.0" layoutX="222.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true" />
-                                    <Label fx:id="label" layoutX="391.0" layoutY="457.0" prefHeight="17.0" prefWidth="187.0" textFill="#60c7ff">
+                                    <ImageView fx:id="image_view" fitHeight="346.0" fitWidth="726.0" layoutX="171.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true" />
+                                    <Label fx:id="label" layoutX="301.0" layoutY="421.0" prefHeight="43.0" prefWidth="193.0" textFill="#1b272c">
                                        <font>
-                                          <Font name="Calibri Bold" size="36.0" />
+                                          <Font name="Cambria Bold" size="24.0" />
                                        </font></Label>
-                                    <Button layoutX="594.0" layoutY="534.0" mnemonicParsing="false" onAction="#next" prefHeight="31.0" prefWidth="85.0" styleClass="search-button" stylesheets="@../../values/style.css" text="suivant" />
-                                    <Button layoutX="320.0" layoutY="534.0" mnemonicParsing="false" onAction="#prev" styleClass="search-button" stylesheets="@../../values/style.css" text="precedant" />
+                                    <Button layoutX="671.0" layoutY="535.0" mnemonicParsing="false" onAction="#next" prefHeight="26.0" prefWidth="85.0" styleClass="search-button" stylesheets="@../../values/style.css" text="suivant" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold" size="15.0" />
+                                       </font></Button>
+                                    <Button layoutX="359.0" layoutY="535.0" mnemonicParsing="false" onAction="#prev" styleClass="search-button" stylesheets="@../../values/style.css" text="precedant" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold" size="15.0" />
+                                       </font></Button>
+                                    <Label fx:id="label1" layoutX="506.0" layoutY="421.0" prefHeight="31.0" prefWidth="169.0" textFill="#1b272c">
+                                       <font>
+                                          <Font name="Cambria Bold" size="24.0" />
+                                       </font>
+                                    </Label>
                                  </children>
                               </AnchorPane>
                           </content>
                         </ScrollPane>
                      </children>
                   </HBox>
-                  <Button mnemonicParsing="false" onAction="#Reserver" prefHeight="50.0" prefWidth="163.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Reserver hotel">
+                  <Button mnemonicParsing="false" onAction="#Reserver" prefHeight="50.0" prefWidth="163.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Reserver hotel" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
                      <VBox.margin>
-                        <Insets left="400.0" top="50.0" />
-                     </VBox.margin>
-                  </Button>
+                        <Insets left="460.0" top="30.0" />
+                     </VBox.margin></Button>
                </children>
             </VBox>
          </center>
