--- a/metaFinal/src/view/hotel/ChambreList.fxml
+++ b/metaFinal/src/view/hotel/ChambreList.fxml
@@ -9,38 +9,41 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="766.0" prefWidth="985.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.ChambreListController">
+<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="766.0" prefWidth="1085.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.ChambreListController">
    <children>
-      <TextField fx:id="numc" layoutX="129.0" layoutY="205.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
-      <Label layoutX="8.0" layoutY="216.0" styleClass="labelform" text="Numero chambre">
+      <TextField fx:id="numc" layoutX="146.0" layoutY="216.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <Label layoutX="23.0" layoutY="227.0" styleClass="labelform" text="Numero chambre">
          <font>
             <Font name="Cambria" size="15.0" />
          </font></Label>
-      <Label layoutX="12.0" layoutY="276.0" styleClass="labelform" text="Type" />
-      <Button fx:id="btn_save" layoutX="486.0" layoutY="705.0" mnemonicParsing="false" onAction="#AjouterChambre" prefHeight="41.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Save">
+      <Label layoutX="29.0" layoutY="288.0" prefHeight="20.0" prefWidth="78.0" styleClass="labelform" text="Type">
+         <font>
+            <Font name="Cambria" size="15.0" />
+         </font></Label>
+      <Button fx:id="btn_save" layoutX="486.0" layoutY="705.0" mnemonicParsing="false" onAction="#AjouterChambre" prefHeight="41.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Save" textFill="WHITE">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="btn_delete" layoutX="752.0" layoutY="704.0" mnemonicParsing="false" onAction="#DeleteChambre" prefHeight="41.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Delete">
+      <Button fx:id="btn_delete" layoutX="752.0" layoutY="704.0" mnemonicParsing="false" onAction="#DeleteChambre" prefHeight="41.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Delete" textFill="WHITE">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="btn_edit" layoutX="628.0" layoutY="705.0" mnemonicParsing="false" onAction="#EditChambre" prefHeight="41.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Edit">
+      <Button fx:id="btn_edit" layoutX="628.0" layoutY="705.0" mnemonicParsing="false" onAction="#EditChambre" prefHeight="41.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Edit" textFill="WHITE">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
       <ImageView fx:id="image_view" fitHeight="142.0" fitWidth="199.0" layoutX="120.0" layoutY="590.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="24.0" layoutY="590.0" mnemonicParsing="false" onAction="#insertImage" styleClass="search-button" stylesheets="@../../values/style.css" text="Browse" />
+      <Button layoutX="24.0" layoutY="590.0" mnemonicParsing="false" onAction="#insertImage" styleClass="search-button" stylesheets="@../../values/style.css" text="Browse" textFill="WHITE" />
       <Label fx:id="file_path" alignment="CENTER" layoutX="10.0" layoutY="553.0" prefHeight="23.0" prefWidth="199.0" />
         
-      <TableView fx:id="tab_chambre" layoutX="353.0" layoutY="163.0" onMouseClicked="#tablehandleButtonAction" prefHeight="513.0" prefWidth="617.0">
+      <TableView fx:id="tab_chambre" layoutX="412.0" layoutY="181.0" onMouseClicked="#tablehandleButtonAction" prefHeight="499.0" prefWidth="620.0">
         <columns>
           <TableColumn fx:id="idc_tab" prefWidth="75.0" text="Id chambre" />
           <TableColumn fx:id="numc_tab" prefWidth="119.0" text="Numero chambre " />
@@ -51,42 +54,49 @@
             <TableColumn fx:id="prix_tab" prefWidth="83.0" text="Prix chambre" />
         </columns>
       </TableView>
-      <Label layoutX="11.0" layoutY="342.0" styleClass="labelform" text="Etat" />
-      <ComboBox fx:id="etat" layoutX="129.0" layoutY="332.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#747a80" height="87.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" width="985.0" />
-      <Label layoutX="281.0" layoutY="6.0" prefHeight="75.0" prefWidth="380.0" text="Gestion chambre " textAlignment="CENTER" textFill="#00d1ff">
+      <Label layoutX="27.0" layoutY="353.0" styleClass="labelform" text="Etat">
          <font>
-            <Font name="Cambria" size="48.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="type" layoutX="129.0" layoutY="266.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+            <Font name="Cambria" size="15.0" />
+         </font></Label>
+      <ComboBox fx:id="etat" layoutX="147.0" layoutY="343.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <ComboBox fx:id="type" layoutX="147.0" layoutY="277.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
       
-      <Label layoutX="14.0" layoutY="522.0" styleClass="labelform" text="Choissisez une image ">
+      <Label layoutX="9.0" layoutY="545.0" styleClass="labelform" text="Choissisez une image ">
          <font>
             <Font size="12.0" />
          </font></Label>
-      <ComboBox fx:id="nomhotel" layoutX="129.0" layoutY="399.0" prefHeight="41.0" prefWidth="199.0" promptText="Hotel" styleClass="search-box" stylesheets="@../../values/style.css" />
-      <Label layoutX="11.0" layoutY="410.0" text="Hotel">
+      <ComboBox fx:id="nomhotel" layoutX="147.0" layoutY="410.0" prefHeight="41.0" prefWidth="199.0" promptText="Hotel" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <Label layoutX="29.0" layoutY="421.0" text="Hotel">
          <font>
             <Font name="Cambria" size="15.0" />
          </font></Label>
-      <Button layoutX="40.0" layoutY="714.0" mnemonicParsing="false" onAction="#Retour" prefHeight="31.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour">
+      <Button layoutX="40.0" layoutY="714.0" mnemonicParsing="false" onAction="#Retour" prefHeight="31.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" textFill="WHITE">
          <font>
-            <Font name="Cambria" size="15.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <ImageView fitHeight="101.0" fitWidth="154.0" layoutX="866.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../image/logo_meta.png" />
-         </image>
-      </ImageView>
-      <TextField fx:id="tfrecherche" layoutX="554.0" layoutY="105.0" prefHeight="41.0" prefWidth="214.0" promptText="Recherche" styleClass="search-box" stylesheets="@../../values/style.css" />
-      <TextField fx:id="prixc" layoutX="128.0" layoutY="463.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
-      <Text layoutX="13.0" layoutY="489.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix Chambre ">
+      <TextField fx:id="tfrecherche" layoutX="51.0" layoutY="154.0" prefHeight="41.0" prefWidth="337.0" promptText="Recherche" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <TextField fx:id="prixc" layoutX="147.0" layoutY="472.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <Text layoutX="23.0" layoutY="497.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix Chambre ">
          <font>
             <Font name="Cambria" size="15.0" />
          </font>
       </Text>
+      <VBox alignment="CENTER" layoutX="24.0" layoutY="14.0" prefHeight="85.0" prefWidth="1002.0" styleClass="chosen-fruit-card" stylesheets="@../../values/style.css">
+         <children>
+            <ImageView fitHeight="80.0" fitWidth="187.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/logo_meta.png" />
+               </image>
+            </ImageView>
+            <Label alignment="CENTER" text="MetaTrip  Chambre" textFill="#fcf3f3">
+               <font>
+                  <Font name="Cambria Bold" size="36.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
       
    </children>
+    
 </AnchorPane>
