--- a/metaFinal/src/view/hotel/HotelList.fxml
+++ b/metaFinal/src/view/hotel/HotelList.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="left_main" prefHeight="571.0" prefWidth="1003.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.HotelListController">
+<AnchorPane fx:id="left_main" prefHeight="637.0" prefWidth="1043.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.HotelListController">
    <children>
-      <TableView fx:id="tab_hotel" layoutX="412.0" layoutY="174.0" onMouseClicked="#tablehandleButtonAction" prefHeight="299.0" prefWidth="536.0">
+      <TableView fx:id="tab_hotel" layoutX="405.0" layoutY="214.0" onMouseClicked="#tablehandleButtonAction" prefHeight="342.0" prefWidth="607.0">
          <columns>
             <TableColumn fx:id="id_hotel_tab" prefWidth="112.0" text="Id hotel" />
             <TableColumn fx:id="nom_tab" prefWidth="92.0" text="Nom hotel" />
@@ -22,55 +22,61 @@
             <TableColumn fx:id="image_tab" prefWidth="75.0" text="Image " />
          </columns>
       </TableView>
-      <Label layoutX="40.0" layoutY="297.0" text="Adresse " textFill="#555555">
+      <Label layoutX="21.0" layoutY="330.0" text="Adresse " textFill="#555555">
          <font>
             <Font name="Cambria" size="15.0" />
          </font></Label>
-      <Label layoutX="14.0" layoutY="245.0" text="Nombre etoile " textFill="#555555">
+      <Label layoutX="21.0" layoutY="276.0" text="Nombre etoile " textFill="#555555">
          <font>
             <Font name="Cambria" size="15.0" />
          </font></Label>
-      <Label layoutX="64.0" layoutY="198.0" text="Nom" textFill="#555555">
+      <Label layoutX="26.0" layoutY="204.0" text="Nom" textFill="#555555">
          <font>
             <Font name="Cambria" size="15.0" />
          </font></Label>
-      <TextField fx:id="Nom_hotel" layoutX="131.0" layoutY="193.0" styleClass="search-box" stylesheets="@../../values/style.css" />
-      <TextField fx:id="Nb_etoiles" layoutX="131.0" layoutY="240.0" styleClass="search-box" stylesheets="@../../values/style.css" />
-      <TextField fx:id="Adresse" layoutX="131.0" layoutY="292.0" styleClass="search-box" stylesheets="@../../values/style.css" />
-      <Button fx:id="delete" layoutX="189.0" layoutY="501.0" mnemonicParsing="false" onAction="#DeleteHotel" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Delete">
+      <TextField fx:id="Nom_hotel" layoutX="131.0" layoutY="193.0" prefHeight="42.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <TextField fx:id="Nb_etoiles" layoutX="131.0" layoutY="255.0" prefHeight="42.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <TextField fx:id="Adresse" layoutX="126.0" layoutY="319.0" prefHeight="42.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <Button fx:id="delete" layoutX="695.0" layoutY="577.0" mnemonicParsing="false" onAction="#DeleteHotel" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Delete" textFill="WHITE">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="bsave1" layoutX="297.0" layoutY="501.0" mnemonicParsing="false" onAction="#EditHotel" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Edit">
+      <Button fx:id="bsave1" layoutX="572.0" layoutY="577.0" mnemonicParsing="false" onAction="#EditHotel" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Edit" textFill="WHITE">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="bsave11" layoutX="89.0" layoutY="501.0" mnemonicParsing="false" onAction="#SaveHotel" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Save">
+      <Button fx:id="bsave11" layoutX="451.0" layoutY="577.0" mnemonicParsing="false" onAction="#SaveHotel" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Save" textFill="WHITE">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="insert_image" layoutX="35.0" layoutY="379.0" mnemonicParsing="false" onAction="#insert_image" prefHeight="33.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Browse" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#747a80" height="87.0" layoutX="-4.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" width="1026.0" />
-      <Label layoutX="318.0" layoutY="11.0" prefHeight="10.0" prefWidth="337.0" text="Gestion Hotel" textFill="#00d1ff">
-         <font>
-            <Font name="Cambria Bold" size="48.0" />
-         </font>
-      </Label>
-      <Label layoutX="20.0" layoutY="345.0" text="choisir une image " textFill="#555555">
+      <Button fx:id="insert_image" layoutX="29.0" layoutY="436.0" mnemonicParsing="false" onAction="#insert_image" prefHeight="33.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Browse" textFill="WHITE" />
+      <Label layoutX="21.0" layoutY="398.0" text="choisir une image " textFill="#555555">
          <font>
             <Font name="Cambria Math" size="15.0" />
          </font></Label>
-      <ImageView fx:id="image_view" fitHeight="135.0" fitWidth="187.0" layoutX="189.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" />
-          <Label fx:id="file_path" alignment="CENTER" layoutX="15.0" layoutY="429.0" prefHeight="23.0" prefWidth="199.0" />
-      <TextField fx:id="tfrecherche" layoutX="661.0" layoutY="106.0" prefHeight="42.0" prefWidth="220.0" promptText="Recherche" styleClass="search-box" stylesheets="@../../values/style.css" />
-      <Button layoutX="827.0" layoutY="487.0" mnemonicParsing="false" onAction="#Retour" prefHeight="31.0" prefWidth="88.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" />
-      <ImageView fitHeight="93.0" fitWidth="117.0" layoutX="904.0" layoutY="-6.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../image/logo_meta.png" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="image_view" fitHeight="135.0" fitWidth="187.0" layoutX="152.0" layoutY="436.0" pickOnBounds="true" preserveRatio="true" />
+          <Label fx:id="file_path" alignment="CENTER" layoutX="146.0" layoutY="407.0" prefHeight="23.0" prefWidth="199.0" />
+      <TextField fx:id="tfrecherche" layoutX="600.0" layoutY="156.0" prefHeight="42.0" prefWidth="288.0" promptText="Recherche" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <Button layoutX="24.0" layoutY="578.0" mnemonicParsing="false" onAction="#Retour" prefHeight="31.0" prefWidth="88.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Button>
+      <VBox alignment="CENTER" layoutX="21.0" layoutY="14.0" prefHeight="85.0" prefWidth="1002.0" styleClass="chosen-fruit-card" stylesheets="@../../values/style.css">
+         <children>
+            <ImageView fitHeight="80.0" fitWidth="187.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/logo_meta.png" />
+               </image>
+            </ImageView>
+            <Label alignment="CENTER" text="MetaTrip  Hotel " textFill="#fcf3f3">
+               <font>
+                  <Font name="Cambria Bold" size="36.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
