--- a/metaFinal/src/view/hotel/InterfaceReservationFXML.fxml
+++ b/metaFinal/src/view/hotel/InterfaceReservationFXML.fxml
@@ -54,7 +54,7 @@
                         <Insets left="50.0" right="50.0" />
                      </VBox.margin>
                      <children>
-                        <ImageView fitHeight="101.0" fitWidth="243.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="117.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../img/logo_meta.png" />
                            </image>
@@ -118,39 +118,55 @@
                                     </GridPane>
                                     <HBox fx:id="chosenhotelCard1" alignment="CENTER" layoutX="267.0" layoutY="10.0" prefHeight="100.0" prefWidth="477.0" styleClass="shadow" stylesheets="@../../values/style.css">
                                        <children>
-                                          <Label prefHeight="44.0" prefWidth="326.0" text="Reservation hotel " textFill="#8d8686">
+                                          <Label prefHeight="66.0" prefWidth="351.0" text="Reservation hotel " textFill="#8d8686">
                                              <font>
                                                 <Font name="Cambria Bold" size="36.0" />
                                              </font>
                                           </Label>
                                        </children>
                                     </HBox>
-                                    <TextField fx:id="Nb_personnes" layoutX="168.0" layoutY="258.0" prefHeight="38.0" prefWidth="218.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+                                    <TextField fx:id="Nb_personnes" layoutX="168.0" layoutY="258.0" prefHeight="42.0" prefWidth="218.0" styleClass="search-box" stylesheets="@../../values/style.css" />
                                     <DatePicker fx:id="Date_depart" layoutX="587.0" layoutY="273.0" />
                                     <DatePicker fx:id="Date_arrivee" layoutX="587.0" layoutY="336.0" />
-                                     
-                                    <Button fx:id="affich_list" layoutX="815.0" layoutY="490.0" mnemonicParsing="false" onAction="#AfficherListe" prefHeight="56.0" prefWidth="142.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Afficher liste " textFill="#f5f3f3">
+                                   
+                                    <Text layoutX="22.0" layoutY="217.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre nuitees ">
+                                       <font>
+                                          <Font name="Cambria" size="18.0" />
+                                       </font>
+                                    </Text>
+                                    <Text layoutX="14.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre Personne ">
+                                       <font>
+                                          <Font name="Cambria" size="18.0" />
+                                       </font></Text>
+                                    <Text layoutX="39.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hotel ">
+                                       <font>
+                                          <Font name="Cambria" size="18.0" />
+                                       </font></Text>
+                                    <Text layoutX="478.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Depart">
+                                       <font>
+                                          <Font name="Cambria" size="18.0" />
+                                       </font></Text>
+                                    <Text layoutX="482.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date arrivé">
+                                       <font>
+                                          <Font name="Cambria" size="18.0" />
+                                       </font></Text>
+                                    <Button fx:id="retour_btn" layoutX="41.0" layoutY="562.0" mnemonicParsing="false" onAction="#Retour" prefHeight="48.0" prefWidth="135.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="15.0" />
                                        </font></Button>
-                                   
-                                    <Text layoutX="39.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre nuitees ">
-                                       <font>
-                                          <Font name="Cambria" size="15.0" />
-                                       </font>
-                                    </Text>
-                                    <Text layoutX="39.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre Personne " />
-                                    <Text layoutX="39.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hotel " />
-                                    <Text layoutX="478.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Depart" />
-                                    <Text layoutX="482.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date arrivé" />
-                                    <Button fx:id="retour_btn" layoutX="822.0" layoutY="554.0" mnemonicParsing="false" onAction="#Retour" prefHeight="48.0" prefWidth="135.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" textFill="WHITE" />
-                                    <TextField fx:id="Nb_personnes2" layoutX="168.0" layoutY="192.0" prefHeight="38.0" prefWidth="218.0" styleClass="search-box" stylesheets="@../../values/style.css" />
-                                    <ComboBox fx:id="Idh" layoutX="164.0" layoutY="327.0" prefHeight="40.0" prefWidth="224.0" styleClass="search-box" stylesheets="@../../values/style.css" />
-                                    <Button layoutX="414.0" layoutY="440.0" mnemonicParsing="false" onAction="#reserver" prefHeight="31.0" prefWidth="184.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Reserver" textFill="WHITE">
+                                    <TextField fx:id="Nb_personnes2" layoutX="168.0" layoutY="192.0" prefHeight="42.0" prefWidth="218.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+                                    <ComboBox fx:id="Idh" layoutX="168.0" layoutY="327.0" prefHeight="42.0" prefWidth="220.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+                                    <Button layoutX="388.0" layoutY="476.0" mnemonicParsing="false" onAction="#reserver" prefHeight="64.0" prefWidth="219.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Reserver" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="23.0" />
                                        </font>
                                     </Button>
+                                    <Text layoutX="39.0" layoutY="425.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chambre">
+                                       <font>
+                                          <Font name="Cambria" size="18.0" />
+                                       </font>
+                                    </Text>
+                                    <ComboBox fx:id="Idc" layoutX="169.0" layoutY="400.0" prefHeight="42.0" prefWidth="212.0" styleClass="search-box" stylesheets="@../../values/style.css" />
                                  </children>
                               </AnchorPane>
                           </content>
