--- a/metaFinal/src/view/hotel/item.fxml
+++ b/metaFinal/src/view/hotel/item.fxml
@@ -1,43 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="327.0" prefWidth="343.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.ItemController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="391.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.ItemController">
    <children>
-      <VBox alignment="CENTER" layoutX="-4.0" prefHeight="327.0" prefWidth="351.0" styleClass="right-bar" stylesheets="@style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="image" fitHeight="179.0" fitWidth="200.0" layoutX="96.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
+      <HBox layoutX="14.0" layoutY="217.0" prefHeight="48.0" prefWidth="374.0">
          <children>
-            <HBox prefHeight="45.0" prefWidth="183.0">
-               <children>
-                  <Label fx:id="namehotel" text="Hotel">
-                     <font>
-                        <Font name="Cambria Bold" size="24.0" />
-                     </font>
-                  </Label>
-                  <HBox prefHeight="31.0" prefWidth="149.0" />
-                  <Label fx:id="adressehotel" text="Hotel">
-                     <font>
-                        <Font name="Cambria" size="20.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <ImageView fx:id="image_hotel" fitHeight="160.0" fitWidth="190.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../image/hotel2.jpeg" />
-               </image>
-            </ImageView>
-            <HBox prefHeight="28.0" prefWidth="311.0" />
+            <Label fx:id="nomhotel" text="Hotel">
+               <font>
+                  <Font name="Cambria Bold" size="24.0" />
+               </font>
+            </Label>
+            <HBox prefHeight="45.0" prefWidth="169.0" />
+            <Label fx:id="nb_etoile" text="Hotel">
+               <font>
+                  <Font name="Cambria" size="20.0" />
+               </font>
+            </Label>
          </children>
-         <padding>
-            <Insets left="20.0" right="20.0" />
-         </padding>
-      </VBox>
+      </HBox>
+      <Label fx:id="adressehotel1" layoutX="249.0" layoutY="276.0" text="Adresse">
+         <font>
+            <Font name="Cambria" size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
